Add delegation in verifying paymaster data for paymaster signature calculation
